Fix white background between footer and content on on mobile devices when browser window changes size

--- a/style.css
+++ b/style.css
@@ -36,8 +36,6 @@ body {
     var(--secondary-bg-color) 1em,
     var(--secondary-bg-color) 2em
   );
-  background-repeat: no-repeat;
-  background-attachment: fixed;
   color: var(--main-fg-color);
   height: 100%;
 }
